--- a/templates/admin/user/view.html.twig
+++ b/templates/admin/user/view.html.twig
@@ -8,7 +8,6 @@
 {% block main %}
     <div class="container-fluid">
         <h1 class="my-5">Suivi du patient {{ user.fullname }}</h1>
-
         <div class="card mt-3">
             <div class="card-body">
                 {% if user.participateContents is not empty %}
@@ -17,100 +16,105 @@
                             {% set content = participateContent.content %}
                             {% set url = path('contents_play', {'slug': content.slug }) %}
 
-                            {% for hemoglobin in participateContent.result.hemoglobins %}
-                                {% set datesHemo  = datesHemo|merge([hemoglobin.date|date("d/m/Y")]) %}
-                                {% set valuesHemo = valuesHemo|merge([hemoglobin.value]) %}
-
-                            {% endfor %}
-
                             <div class="col-md-12">
                                 <div class="card bg-light mb-3">
                                     {% if participateContent.completedAt is not null %}
                                         <div id="ribbon-container">
-                                            <p id="ribbon-{{ content.slug }}">Terminé le {{ participateContent.completedAt | date("d/m/Y  H:i", "Europe/Paris") }}</p>
+                                            <p id="ribbon-{{ content.slug }}">Terminé le {{ participateContent.completedAt | date("d/m/Y", "Europe/Paris") }}</p>
                                         </div>
-                                    {% endif %}                                
+                                    {% endif %}
+                                    {% if content.id == 10 %}
+                                        <a style="position: absolute; left: 20px; top: 20px;" href="{{ path('pdf_stats_user', {'id': user.id }) }}"><img src="/assets/images/icon-pdf.png" alt="icon pdf" height="60px"></a>                            
+                                    {% endif %}
                                     <div style="height: 200px; background: url({{ vich_uploader_asset(content, 'coverImageFile') }}) no-repeat center center; color: black; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;"></div>
                                     <div class="card-body">
                                         <h2 class="text-truncate" style="text-align: center;">{{ content.title }}</h2>
-                                        <hr>                                       
-                                        <h3 class="card-title">Questionnaires pré et post-formation</h4>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <div class="row">
-                                                    <div class="col-md-12">
-                                                        <h3 class="progress-title">Avant la formation (bonnes réponses)</h3>
-                                                        <div class="progress-outer">
-                                                            <div class="progress">
-                                                                <div class="progress-bar progress-bar-striped progress-bar-{{ (participateContent.result.scoring.pr <= 50) ? 'danger' : 'success' }}" style="width:{{ participateContent.result.scoring.pr }}%;"></div>
-                                                                <div class="progress-value"><span>{{ participateContent.result.scoring.pr }}</span>%</div>
-                                                            </div>
-                                                        </div>                                                    
-                                                    </div>                       
-                                                </div>                                        
-                                            </div>                                        
-                                            <div class="col-md-6">
-                                                <div class="row">
-                                                    <div class="col-md-12">
-                                                        <h3 class="progress-title">Après la formation (bonnes réponses)</h3>
-                                                        {% if  participateContent.result.scoring.po == -1 %}
-                                                            <p style="line-height: 40px; font-weight: 700;">Vous n'avez pas encore répondu au questionnaire post-formation.</p>
-                                                        {% else %}
+                                        <hr>
+                                        {% if content.id == 10 %}
+
+                                            {% for hemoglobin in participateContent.result.hemoglobins %}
+                                                {% set datesHemo  = datesHemo|merge([hemoglobin.date|date("d/m/Y")]) %}
+                                                {% set valuesHemo = valuesHemo|merge([hemoglobin.value]) %}
+                                            {% endfor %}
+
+                                            <h3 class="card-title">Questionnaires pré et post-formation</h4>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="row">
+                                                        <div class="col-md-12">
+                                                            <h3 class="progress-title">Avant la formation (bonnes réponses)</h3>
                                                             <div class="progress-outer">
                                                                 <div class="progress">
-                                                                    <div class="progress-bar progress-bar-striped progress-bar-{{ (participateContent.result.scoring.po <= 50) ? 'danger' : 'success' }}" style="width:{{ participateContent.result.scoring.po }}%;"></div>
-                                                                    <div class="progress-value"><span>{{ participateContent.result.scoring.po }}</span>%</div>
+                                                                    <div class="progress-bar progress-bar-striped progress-bar-{{ (participateContent.result.scoring.pr <= 50) ? 'danger' : 'success' }}" style="width:{{ participateContent.result.scoring.pr }}%;"></div>
+                                                                    <div class="progress-value"><span>{{ participateContent.result.scoring.pr }}</span>%</div>
                                                                 </div>
-                                                            </div>   
-                                                        {% endif %}
-                                                 
-                                                    </div>                       
+                                                            </div>                                                    
+                                                        </div>                       
+                                                    </div>                                        
                                                 </div>                                        
-                                            </div>               
-                                        </div>
-                                        <h3 class="card-title">Compétences d'ETP acquises</h4>
-                                        {% set skillsName = ["Alimentation", "Activité physique adaptée", "Hypoglycémie", 
-                                                "Metformine", "Insulines", "Antidiabétiques oraux et injectables", "Complications"] %}
-                                        {% for skill in participateContent.result.scoring.skills %}
-                                            {% set percent = (skill.total * 100) / skill.max %}
+                                                <div class="col-md-6">
+                                                    <div class="row">
+                                                        <div class="col-md-12">
+                                                            <h3 class="progress-title">Après la formation (bonnes réponses)</h3>
+                                                            {% if  participateContent.result.scoring.po == -1 %}
+                                                                <p style="line-height: 40px; font-weight: 700;">Pas encore répondu au questionnaire post-formation.</p>
+                                                            {% else %}
+                                                                <div class="progress-outer">
+                                                                    <div class="progress">
+                                                                        <div class="progress-bar progress-bar-striped progress-bar-{{ (participateContent.result.scoring.po <= 50) ? 'danger' : 'success' }}" style="width:{{ participateContent.result.scoring.po }}%;"></div>
+                                                                        <div class="progress-value"><span>{{ participateContent.result.scoring.po }}</span>%</div>
+                                                                    </div>
+                                                                </div>   
+                                                            {% endif %}
+                                                    
+                                                        </div>                       
+                                                    </div>                                        
+                                                </div>               
+                                            </div>
+                                            <h3 class="card-title">Compétences d'ETP acquises</h4>
+                                            {% set skillsName = ["Alimentation", "Activité physique adaptée", "Hypoglycémie", 
+                                                    "Metformine", "Insulines", "Antidiabétiques oraux et injectables", "Complications"] %}
+                                            {% for skill in participateContent.result.scoring.skills %}
+                                                {% set percent = (skill.total * 100) / skill.max %}
 
-                                            {% if percent <= 30 %}
-                                                {% set status = 'danger' %}
-                                            {% elseif percent > 30  and  percent <= 60 %}
-                                                {% set status = 'info' %}
-                                            {% else %}
-                                                {% set status = 'success' %}
-                                            {% endif %}
+                                                {% if percent <= 30 %}
+                                                    {% set status = 'danger' %}
+                                                {% elseif percent > 30  and  percent <= 60 %}
+                                                    {% set status = 'info' %}
+                                                {% else %}
+                                                    {% set status = 'success' %}
+                                                {% endif %}
 
-                                            <div class="row">                                  
-                                                <div class="col-md-12">
-                                                    <h3 class="progress-title">{{ skillsName[(skill.id - 1)] }}</h3>
-                                                    <div class="progress-outer">
-                                                        <div class="progress">
-                                                            <div class="progress-bar progress-bar-striped progress-bar-{{ status }}" style="width:{{ percent }}%;"></div>
-                                                            <div class="progress-value"><span>{{ percent }}</span>%</div>
+                                                <div class="row">                                  
+                                                    <div class="col-md-12">
+                                                        <h3 class="progress-title">{{ skillsName[(skill.id - 1)] }}</h3>
+                                                        <div class="progress-outer">
+                                                            <div class="progress">
+                                                                <div class="progress-bar progress-bar-striped progress-bar-{{ status }}" style="width:{{ percent }}%;"></div>
+                                                                <div class="progress-value"><span>{{ percent }}</span>%</div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            {% endfor %}
+
+                                            <h3 class="card-title">Hémoglobine(s) glyquée(s) déclarée(s)</h4>
+
+                                            <!-- Area Chart -->
+                                            <div class="row justify-content-md-center align-items-center">
+                                                <div class="col-xl-8 col-lg-7 align-items-center">
+                                                    <div class="card shadow mb-4">
+                                                        <!-- Card Body -->
+                                                        <div class="card-body">
+                                                            <div class="chart-area">
+                                                                <canvas id="myAreaChart"></canvas>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-
-                                        {% endfor %}
-
-                                        <h3 class="card-title">Hémoglobine(s) glyquée(s) déclarée(s)</h4>
-
-                                        <!-- Area Chart -->
-                                        <div class="row justify-content-md-center align-items-center">
-                                            <div class="col-xl-8 col-lg-7 align-items-center">
-                                                <div class="card shadow mb-4">
-                                                    <!-- Card Body -->
-                                                    <div class="card-body">
-                                                        <div class="chart-area">
-                                                            <canvas id="myAreaChart"></canvas>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
